--- a/annotation/example/pubspec.yaml
+++ b/annotation/example/pubspec.yaml
@@ -1,8 +1,8 @@
-name: example_for_dart_model_entity_annotation
+name: example_for_dart_mem_annotation
 description: A project used to demo the DartModelEntityAnnotationGenerator
 version: 0.0.1
 homepage: https://www.linkedin.com/in/resam/
-repository: https://github.com/reesaam/dart_model_entity_mapper_annotation_generator.git
+repository: https://github.com/reesaam/dart_mem_annotation_generator.git
 
 environment:
   sdk: ^3.5.3
@@ -10,13 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dart_model_entity_annotation:
+  freezed: ^2.5.7
+  dart_mem_annotation:
     path: ../../annotation/
 
 dev_dependencies:
   build_runner: ^2.4.13
+  freezed_annotation: ^2.4.4
   dartdoc: ^8.0.8
   lints: ^4.0.0
   test: ^1.24.0
-  dart_model_entity_annotation_generator:
+  dart_mem_annotation_generator:
     path: ../../generator/
