--- a/annotation/example/pubspec.yaml
+++ b/annotation/example/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   freezed: ^2.5.7
+  json_annotation: ^4.9.0
   dart_mem_annotation:
     path: ../../annotation/
 
 dev_dependencies:
   build_runner: ^2.4.13
   freezed_annotation: ^2.4.4
+  json_serializable: ^6.8.0
   dartdoc: ^8.0.8
   lints: ^4.0.0
   test: ^1.24.0
