--- a/annotation/example/pubspec.yaml
+++ b/annotation/example/pubspec.yaml
@@ -1,22 +1,22 @@
 name: example_for_dart_mem_annotation
 description: A project used to demo the DartModelEntityAnnotationGenerator
-version: 0.0.3
+version: 0.1.0
 homepage: https://www.linkedin.com/in/resam/
 repository: https://github.com/reesaam/dart_mem_annotation_generator.git
 
 environment:
-  sdk: ^3.5.3
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  freezed: ^2.5.7
+  freezed: ^2.5.2
   json_annotation: ^4.9.0
   dart_mem_annotation:
     path: ../../annotation/
 
 dev_dependencies:
-  build_runner: ^2.4.13
+  build_runner: ^2.4.10
   freezed_annotation: ^2.4.4
   json_serializable: ^6.8.0
   dartdoc: ^8.0.8
